--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "dotenv": "^4.0.0",
     "express": "^4.14.0",
     "knex": "^0.13.0",
+    "material-ui": "^0.18.7",
     "pg": "^6.2.3",
     "react-redux": "^5.0.5",
     "redux": "^3.6.0",
