--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "express": "^4.14.0",
     "knex": "^0.13.0",
     "material-ui": "^0.18.7",
+    "material-ui-search-bar": "^0.3.0",
     "pg": "^6.2.3",
     "react-redux": "^5.0.5",
     "redux": "^3.6.0",
