--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "boilerplate-react-webpack",
   "version": "0.1.1",
   "description": "A webpack React starter",
-  "repository":
-    "https://github.com/dev-academy-challenges/boilerplate-react-webpack.git",
+  "repository": "https://github.com/dev-academy-challenges/boilerplate-react-webpack.git",
   "main": "server/index.js",
   "scripts": {
     "dev": "nodemon --watch server server/index & webpack --watch",
@@ -21,7 +20,11 @@
     "babel": "inherit"
   },
   "babel": {
-    "presets": ["es2015", "react", "stage-0"]
+    "presets": [
+      "es2015",
+      "react",
+      "stage-0"
+    ]
   },
   "author": "EDA",
   "license": "ISC",
@@ -33,14 +36,9 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.24.1",
-    "enzyme": "^2.8.2",
     "jsdom": "^11.0.0",
     "jsx-loader": "^0.13.2",
     "nodemon": "^1.11.0",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
-    "react-router-dom": "^4.1.1",
-    "react-test-renderer": "^15.5.4",
     "sqlite3": "^3.1.8",
     "supertest": "^3.0.0",
     "webpack": "^2.3.3",
@@ -54,7 +52,10 @@
     "express": "^4.14.0",
     "knex": "^0.13.0",
     "pg": "^6.2.3",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
     "react-redux": "^5.0.5",
+    "react-router-dom": "^4.2.2",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
     "superagent": "^2.2.0"
