--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "crypto": "0.0.3",
     "dotenv": "^4.0.0",
     "express": "^4.14.0",
+    "immutability-helper": "^2.6.4",
     "knex": "^0.13.0",
     "pg": "^6.2.3",
     "react": "^16.2.0",
